<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cadastro de Alunos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_formulario">Adicionar</string>
    <string name="phone">Telefone</string>
    <string name="name">Nome</string>
    <string name="address">Endereço</string>
    <string name="site">Site</string>
    <string name="menu_enviar_notas">Enviar notas</string>
    <string name="menu_receber_provas">Receber provas</string>
    <string name="title_activity_provas">Provas</string>
    <string name="title_activity_lixo">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mostra_alunos">Mostra Alunos</string>
    <string name="menu_mostra_mapa">Mostrar mapa</string>

</resources>
