<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ListaAlunosActivity">

    <item android:id="@+id/menu_mostra_mapa"
        android:title="@string/menu_mostra_mapa"
        android:orderInCategory="50"
        android:icon="@drawable/ic_mapa"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_receber_provas"
        android:title="@string/menu_receber_provas"
        android:orderInCategory="100"
        android:icon="@drawable/ic_receber"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_enviar_notas"
        android:title="@string/menu_enviar_notas"
        android:orderInCategory="200"
        android:icon="@drawable/ic_enviar"
        app:showAsAction="always" />

</menu>
