<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.caelum.cadastro.FormularioActivity"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="235dp">

            <ImageView
                android:id="@+id/formulario_foto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#00A8EC"
                android:src="@drawable/person" />

            <Button
                android:id="@+id/formulario_foto_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/formulario_foto_button"
                android:elevation="5dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


        </RelativeLayout>

        <EditText
            android:id="@+id/formulario_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="Name" />

        <EditText
            android:id="@+id/formulario_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/formulario_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/formulario_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/site" />

        <RatingBar
            android:id="@+id/formulario_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>